fixed nameoverflow, fixed wrong sectionnames

--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,52 @@
 body.format-progresstopics .progresswarning {
     color: red;
-    font-size: .7em
+    font-size: .7em;
 }
 
 body.format-progresstopics .progresspendingwarning {
     color: lightskyblue;
-    font-size: .7em
+    font-size: .7em;
 }
 
 body.format-progresstopics .progresssection {
     width: 100%;
     height: 6em;
-    text-align: justify
+    text-align: justify;
+}
+
+body.format-progresstopics .labelsection {
+    width: 100%;
+    height: 2em;
+    text-align: justify;
 }
 
 body.format-progresstopics .dummy-2 {
     display: inline-block;
-    width: 0
+    width: 0;
 }
 
 body.format-progresstopics .dummy {
     display: inline-block;
-    width: 100%
+    width: 100%;
 }
 
-body.format-progresstopics .pie-wrapper {
+body.format-progresstopics .sectioncontainer {
     height: 6em;
     width: 6em;
     margin-left: 5px;
     margin-right: 5px;
     position: relative;
-    display: inline-block
+    display: inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+body.format-progresstopics .pie-wrapper {
+    height: 6em;
+    width: 6em;
+    position: relative;
+    display: inline-block;
+    overflow: hidden;
 }
 
 body.format-progresstopics .pie-wrapper:nth-child(3n+1) {
@@ -54,7 +70,15 @@ body.format-progresstopics .pie-wrapper .pie .half-circle {
     clip: rect(0, 3em, 6em, 0);
     left: 0;
     position: absolute;
-    top: 0
+    top: 0;
+}
+
+body.format-progresstopics .sectionnamelabel {
+    width: 6em;
+    display: inline-block;
+    text-align: center;
+    overflow: visible;
+    white-space: nowrap;
 }
 
 body.format-progresstopics .pie-wrapper .label {
@@ -69,7 +93,9 @@ body.format-progresstopics .pie-wrapper .label {
     bottom: 1em;
     line-height: 4.2em;
     position: absolute;
-    text-align: center
+    text-align: center;
+    word-break: keep-all;
+    white-space: nowrap;
 }
 
 body.format-progresstopics .pie-wrapper .shadow {
